--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "deploy": "firebase deploy --only hosting",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "sass --watch scss/custom.scss public/css/output.css"
+    "start": "sass --watch scss/custom.scss public/css/output.css",
+    "index": "node ./google-index/index.mjs material-index.co.uk"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/circlusdev/website/issues"
   },
-  "homepage": "https://github.com/circlusdev/website#readme"
+  "homepage": "https://github.com/circlusdev/website#readme",
+  "dependencies": {
+    "googleapis": "131.0.0",
+    "sitemapper": "3.2.8"
+  }
 }
